[build-system]
requires = ["hatchling", "numpy"]
build-backend = "hatchling.build"

[project]
name = "push_HarrisonKramer"
version = "0.0.1"
authors = [
  { name="Kramer Harrison", email="kdanielharrison@gmail.com" },
]
description = "Simulation environment for card game PUSH"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]